# mcmanagement

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  mise.toml  notice-to-myself.txt
.github/workflows/: build.yaml
src/: config.rs  main.rs  state.rs  web.rs  worker.rs
templates/: console.html  index.html
