[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/api",
    "packages/shared",
    "packages/server",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
shared = { path = "packages/shared" }
server = { path = "packages/server" }